Subscriber page banner mobile fixed on iphone SE

--- a/assets/less/subscriber.less
+++ b/assets/less/subscriber.less
@@ -14,13 +14,16 @@
 /* SUBSCRIBER HERO BANEER SECTION  AREA STYLES */
 
 #subscriber-banner-section {
-    height: 100vh;
+    height: auto;
     .subscriber-background {
         display: flex;
         justify-content: center;
         align-items: center;
         text-align: center;
-        min-height: 100vh;
+        height: 100vh;
+    }
+    .subscriber-banner-container {
+        height: 100vh;
     }
     .uk-dotnav-contrast {
         >.uk-active {
@@ -47,6 +50,9 @@
         position: absolute;
         left: 0;
         right: 0;
+        @media (max-width: 320px) and (max-height: 568px) {
+            bottom: 100px;
+        }
         >* {
             padding-left: 6px;
         }
@@ -84,7 +90,23 @@
 
 
 
+
+
 /* END SUBSCRIBER HERO BANEER SECTION  AREA STYLES */
+
+
+/* ABOUT SECTION OVERLAPED AREA STYLES */
+
+#overlaped-section {
+    @media (max-width: 320px) and (max-height: 568px) {
+        transform: translateY(-30%) !important;
+    }
+}
+
+
+
+
+/* END ABOUT SECTION OVERLAPED AREA STYLES */
 
 
 /* FEATURED SERVICES SECTION  AREA STYLES */
@@ -174,6 +196,8 @@
 
 
 
+
+
 /* END FEATURED SERVICES SECTION  AREA STYLES */
 
 
@@ -258,6 +282,8 @@
         }
     }
 }
+
+
 
 
 
@@ -402,6 +428,8 @@
         }
     }
 }
+
+
 
 
 
